--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Robin Michael</title>
+    <title>Robin &Michael</title>
 
 
     <!-- CSS Stylesheets -->
